compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_custom_type.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\ntype Wibble {\n    /// Some more exciting documentation\n    Wibble(String)\n    /// The most exciting documentation\n    Wobble(arg: Int)\n}\n"
---
/// Exciting documentation
/// Maybe even multiple lines
type Wibble {
▔▔▔▔▔↑▔▔▔▔▔▔▔
    /// Some more exciting documentation
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    Wibble(String)
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    /// The most exciting documentation
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    Wobble(arg: Int)
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
▔


----- Hover content -----
Scalar(
    String(
        "```gleam\nWibble\n```\n Exciting documentation\n Maybe even multiple lines",
    ),
)
