compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_expressions_in_function_body.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nfn append(x, y) {\n  x <> y\n}\n"
---
fn append(x, y) {
  x <> y
  ↑     
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nString\n```\nA locally defined variable.",
    ),
)
