compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_external_function_with_another_value_same_name.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: hover
---
Hover {
    contents: Scalar(
        String(
            "```gleam\nInt\n```\n\nView on [HexDocs](https://hexdocs.pm/hex/b/example_module.html#my_const)",
        ),
    ),
    range: Some(
        Range {
            start: Position {
                line: 4,
                character: 4,
            },
            end: Position {
                line: 4,
                character: 12,
            },
        },
    ),
}
