compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_external_imported_ffi_renamed_function.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport example_module\nfn main() {\n    example_module.my_fn\n}\n"
---
import example_module
fn main() {
    example_module.my_fn
                  ▔▔▔▔↑▔
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nfn() -> Nil\n```\n\nView on [HexDocs](https://hexdocs.pm/hex/example_module.html#my_fn)",
    ),
)
