compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_external_imported_function.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: hover
---
Hover {
    contents: Scalar(
        String(
            "```gleam\nfn() -> Nil\n```\n\nView on [hexdocs](https://hexdocs.pm/my_dep/example_module.html#my_fn)",
        ),
    ),
    range: Some(
        Range {
            start: Position {
                line: 3,
                character: 16,
            },
            end: Position {
                line: 3,
                character: 22,
            },
        },
    ),
}
