compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_external_imported_function_renamed_module.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport example_module as renamed_module\nfn main() {\n    renamed_module.my_fn\n}\n"
---
import example_module as renamed_module
fn main() {
    renamed_module.my_fn
                  ▔▔▔▔↑▔
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nfn() -> Nil\n```\n\nView on [HexDocs](https://hexdocs.pm/hex/example_module.html#my_fn)",
    ),
)
