compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_external_unqualified_imported_function_renamed_module.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: hover
---
Hover {
    contents: Scalar(
        String(
            "```gleam\nfn() -> Nil\n```\n\nView on [HexDocs](https://hexdocs.pm/hex/example_module.html#my_fn)",
        ),
    ),
    range: Some(
        Range {
            start: Position {
                line: 3,
                character: 4,
            },
            end: Position {
                line: 3,
                character: 9,
            },
        },
    ),
}
